Fix community image and alignment

--- a/app/styles/_headerHeights.scss
+++ b/app/styles/_headerHeights.scss
@@ -23,18 +23,19 @@ $headerHeightBase: 44rem;
 }
 
 @mixin header-height-small() {
-        height: 26rem !important;
+        @include header-height(28rem);
+        // height: 26rem !important;
 
-        @media screen and (max-height: #{$heightNexus5x-iPhone6P}) { 
-            height: 19rem !important;
-        }
-        @media screen and (max-height: #{$heightiPhone6}) { 
-            height: 15rem !important;
-        }
+        // @media screen and (max-height: #{$heightNexus5x-iPhone6P}) { 
+        //     height: 19rem !important;
+        // }
+        // @media screen and (max-height: #{$heightiPhone6}) { 
+        //     height: 15rem !important;
+        // }
 
-        @media screen and (max-height: #{$heightNexus5}) { // and iPhone5
-            height: 12rem !important;
-        }            
+        // @media screen and (max-height: #{$heightNexus5}) { // and iPhone5
+        //     height: 12rem !important;
+        // }            
 }
 
 @mixin header-height-xsmall() {
